--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,5 @@ sourceSets{
 }
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'junit', name: 'junit', version: '4.12'
 }
