--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ sourceSets{
     }
 }
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.5.11'
+    compile 'org.codehaus.groovy:groovy-all:2.4.13'
+    compile 'org.codehaus.groovy:groovy-swing:2.4.13'
     compile group: 'junit', name: 'junit', version: '4.12'
 }
