--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,6 @@ sourceSets{
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.13'
     compile 'org.codehaus.groovy:groovy-swing:2.4.13'
+    compile 'com.google.guava:guava:22.0'
     compile group: 'junit', name: 'junit', version: '4.12'
 }
